# sweep

./: CMakeLists.txt  README.md  sweep.kdev4
.kdev4/: _custom.kdev4  sweep.kdev4
include/: board.h  main.h  sweep.h  version.h
libsweep/: CMakeLists.txt  b_cell.c  b_init.c  b_limits.c  b_populate.c  b_private.h  b_resize.c  b_reveal.c  board_cell.c  board_init.c  board_limits.c  board_populate.c  board_priv.h  board_priv.h~  board_reset.c  board_reveal.c  board_states.c  find_dir.c  g_callback.c  g_controls.c  g_data.c  g_init.c  g_private.h  init.c  m_cmdline.c  m_controls.c  m_debug.c  m_init.c  m_state.c  m_time.c  main_enum.h  main_err.c  main_errstr.c  main_init.c  main_priv.h  main_priv.h~
libsweep/.kdev4/: libsweep.kdev4
qt5/: main.cpp  mainwindow.cpp  mainwindow.h  minesweeper.cpp  minesweeper.h  sweep-qt5.pro  sweepmodel.cpp  sweepmodel.h  tiledelegate.cpp  tiledelegate.h
test/: CMakeLists.txt  test.c
